--- a/frontend/src/index.template.html
+++ b/frontend/src/index.template.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title><%= productName %></title>
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Berkshire+Swash&family=El+Messiri:wght@400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="description" content="<%= productDescription %>">
     <meta name="format-detection" content="telephone=no">
